--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-STUFF
+A visualization for showing where species and genera have been found throughout
+the history of Earth, with continental drift!
+
+Demo here: http://derrickgold.github.io/petulant-octo-spice
+
+The locations of the continents in continental drift are only roughe estimations
+based on youtube videos which may or may not be confirmed. 
+
+Supported actions:
+  -Zooming on the map using the mouse wheel
+  -Panning the map with click and drag
+  -Tool tips appear when hovering the mouse over various elements
+  -Toggling species and genera to display using the species list, or by right clicking their icon
+  -Searching for specific species or genera via search box
+  -Moving forward and backward in time via the time slider
+  -Sorting of species list when clicking the title of that box by name, 
+    number of locations descending and ascending
+  -Information and pictures about the species and genera when their icon is left-clicked
